Update (要*ppmCompare)breaking changes s_delete.js
Deleteの実行時には*ppcfile deleteを使うように変更した
s_delete.jsから"Delete"用の記述を削除し、引数を変更した

--- a/setting/base.cfg
+++ b/setting/base.cfg
@@ -1,10 +1,10 @@
 ﻿KC_main	= {
 $replace:move	, %M_ppmMove,[?cursor_move:M]
 $replace:copy	, %M_ppmCopy,[?cursor_copy:C]
-$replace:delete	, *string p,delMenuPlefix=d
-	*if 4==%*js("PPx.Result=PPx.DirectoryType")%:*string p,delMenuPlefix=0
+$replace:delete	, *string p,fo_delMenuPlefix=d
+	*if 4==%*js("PPx.Result=PPx.DirectoryType")%:*string p,fo_delMenuPlefix=0
 	%M_ppmDelete,[?cursor_delete:D]
-	*string p,delMenuPlefix=
+	*string p,fo_delMenuPlefix=
 $replace:undo	, *script %*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\s_undo.js
 }
 S_ppm#user	= {
