--- a/setting/patch.cfg
+++ b/setting/patch.cfg
@@ -72,8 +72,8 @@ $undo = ^Z
 	*if !0%*script(%*getcust(S_ppm#global:lib)\exists.js,bool,both,%#,FDC)%:*logwindow "対象に実体のないパスが含まれています"%:*stop
 	*execute C,*ppcfile !safedelete,%*getcust(S_ppm#user:fo_trash)%%\,-min -retry:0 -error:ignore -undolog:on -nocount -qstart
 ;@@ FileSystemを利用したバックグラウンド削除 ↓を利用するときは↑をコメントアウト
-; 	*script %*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\s_delete.js,0,1,0,0
-?%sp"delMenuPlefix";実体削除(&R)	= *ifmatch /^aux:.*/,%FD %: %K"@\D" %: *stop
+; 	*script %*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\s_delete.js,0,0
+?%sp"fo_delMenuPlefix";実体削除(&R)	= *ifmatch /^aux:.*/,%FD %: %K"@\D" %: *stop
 	*if !0%*script(%*getcust(S_ppm#global:lib)\exists.js,bool,both,%#,FDC)%:%"ppm-fileoperation"%I"対象に実体のないパスが含まれています"%:*stop
 	 %"ppm-fileoperation"%Q"SafeDeleteを実行します"
 	 *execute C,%Oa *ppcfile !safedelete,%*getcust(S_ppm#user:fo_trash)%%\,-min -retry:0 -error:ignore -undolog:off -nocount -qstart -compcmd %K"@^\D"
@@ -81,10 +81,7 @@ $undo = ^Z
 	*if 9==%so"dirtype"%:*delete "%C"%:*js "PPx.EntryState=1;"%:*linemessage delete thumbnail%:*stop
 	*if 62<=%so"dirtype"%:%"ppm-fileoperation"%Q"書庫から削除します"%:%OTsq %u7-zip64.dll,d -hide %FD %@%:*wait 1000,2%:*jumppath -update -savelocate%:*stop
 	*if !0%*script(%*getcust(S_ppm#global:lib)\exists.js,bool,both,%#,FDC)%:*linemessage !"対象に実体のないパスが含まれています%:*stop
-	%"ppm-fileoperation"%Q"選択ファイルを消去します"
-	*execute C,*ppcfile !delete -min -symdel:sym -retry:0 -error:ignore -undolog:off -nocount -qstart -compcmd %K"@^\D"
-;@@ FileSystemを利用したバックグラウンド削除 ↓を利用するときは↑をコメントアウト
-; 	*script %*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\s_delete.js,1,1,0,0
+	*execute C,*ppcfile delete -symdel:sym -retry:0 -error:ignore -undolog:off -nocount -waittilldone:on -waitresult:on -compcmd %K"@^\D"
 ;@@ 要fcp.exe
 ; ワイプ削除(&W)	= *string o,dirtype=%*js(PPx.result=PPx.DirectoryType;)
 ; 	*if 62<=%so"dirtype"%:%"ppm-fileoperation"%Q"書庫から削除します"%:%OTsq %u7-zip64.dll,d -hide %FD %@%:%K"@F5"%:*stop
@@ -112,11 +109,9 @@ $undo = ^Z
 ;	2,同名ファイルの処理方法	0=skip|1=更新|2=上書き
 ;	3,ファイルごとの結果をログ窓出力	0=しない|1=する
 ;	4,symlink時に管理者権限PPbを使うならタスク名を指定
-; s_delete.js,0,1,2,3
-;	0,削除方法	0=SafeDelete|1=Delete
-;	1,読み込み専用ファイルを削除	0=しない|1=する
-;	2,ファイルごとの結果をログ窓出力	0=しない|1=する
-;	3,最後にエントリリストを更新	0=しない|1=する
+; s_delete.js,0,1
+;	0,ファイルごとの結果をログ窓出力	0=しない|1=する
+;	1,最後にエントリリストを更新	0=しない|1=する
 ; multi_copy.js,0,1,2,3
 ;	0,コピー手段	0=*ppcfile|1=FastCopy(fcp.exe)|2=symlink
 ;	1,同名ファイルの処理方法	0=skip|1=更新|2=上書き
