:sparkles:Update safedeleteのリザルトにtotalを追加

--- a/setting/patch.cfg
+++ b/setting/patch.cfg
@@ -65,7 +65,7 @@ $undo = ^Z
 詳細設定(&D)	= *script %*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\s_copy.js
 }
 -M_ppmDelete	= {
-削除(&D)	= *string o,dirtype=%*js(PPx.result=PPx.DirectoryType;)
+削除(&D)	= *string o,dirtype=%*js("PPx.result=PPx.DirectoryType;")
 	*if 9==%so"dirtype"%:*delete "%C"%:*js "PPx.EntryState=1;"%:*linemessage delete thumbnail%:*stop
 	*ifmatch /^aux:.*/,%FD%:%K"@\D%:*stop
 	*if 4==%so"dirtype"%:%K"@^\D"%:*stop
