:sparkles:Update リネーム関連の項目を追加した

--- a/setting/base.cfg
+++ b/setting/base.cfg
@@ -1,4 +1,21 @@
-﻿KC_main	= {
+﻿A_exec	= {
+@default:reces = 
+}
+KC_main	= {
+$replace:rename_u	, *checkoffmark
+	*if 1==%*js("PPx.Result=PPx.EntryState;")%:*stop
+	*string o,dirtype=%*js("PPx.Result=PPx.DirectoryType;")
+	*if 4==%so'dirtype'%:%K"@R"%:*stop
+	*ifmatch "63;96",%so'dirtype'%:*linemessage !"Not supported in archive%:*stop
+	*ifmatch /^aux:.*/,%FDV%:%K"@R"%:*stop
+	*ppcfile !rename -min -same:skip -error:dialog -log:off -name:"%*input("%C" -title:"Rename" -mode:Ec -select:fs)"
+$replace:rename_ua	, *checkoffmark
+	*if 1==%*js("PPx.Result=PPx.EntryState;")%:*stop
+	*string o,dirtype=%*js("PPx.Result=PPx.DirectoryType;")
+	*if 4==%so'dirtype'%:%K"@R"%:*stop
+	*ifmatch "63;96",%so'dirtype'%:*cd %*temp%:%Obd reces /mn%C:%*input("%*regexp("%FC","s/(.*\\)(.*)/$1|$2|/")" -title:"[?inarc_rename:書庫内ファイル名の変更]" -mode:Ec -select:i) %FD%&%K"@^F5"%:*stop
+	*ifmatch /^aux:.*/,%FDV%:%K"@R"%:*stop
+	*ppcfile !rename -min -same:skip -error:dialog -log:off -name:"%*input("%C" -title:"Rename" -mode:Ec -select:fs)"
 $replace:move	, %M_ppmMove,[?cursor_move:M]
 $replace:copy	, %M_ppmCopy,[?cursor_copy:C]
 $replace:delete	, *string p,fo_delMenuPlefix=d
