--- a/setting/patch.cfg
+++ b/setting/patch.cfg
@@ -11,7 +11,20 @@
 ; 登録される可能性があります
 ;-------------------------------------------------------------------------------
 
+;#A_exec
+; reces.exeのパス(パスが通っていない場合に指定する)
+; 書庫内ファイルのリネームに使用
+;@reces = 
+
 ;#KC_main
+; アンドゥ対応リネーム
+$rename_u = R
+
+; アンドゥ+書庫内ファイル対応リネーム(要reces)
+;$rename_ua = R
+; 書庫内リネームのタイトル
+;?inarc_rename = 書庫内ファイル名の変更
+
 ; 移動メニューを呼び出すキー
 $move = M
 
@@ -90,6 +103,80 @@ $undo = ^Z
 ; 	%"FastCopy wipe_del%Q"%*regexp(%so"path",tr/;/\n/) %: %Obd "%*getcust(S_ppm#user:fo_fastcopy)\fcp.exe" /cmd=delete /wipe_del %*regexp(%so"path", "s/;/ /g")
 マルチ削除(&V)	= *script %*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\multi_delete.js,-qstart
 }
+
+KC_main	= {l
+; Appsキーにリネームメニューを追加(下方の置き換えメニューの設定が必要)
+;\R	, *linecust editc,K_edit:FIRSTEVENT,*string e,fo_mode=rename%%:*linecust editc,K_edit:FIRSTEVENT,
+;	*ifmatch "63;96",%*js("PPx.Result=PPx.DirectoryType;")%:*linemessage !"Not supported in archive%:*stop
+;	*ppcfile rename -same:skip -log:off
+^R	, %M_ppmRename,R
+}
+-M_ppmRename	= {
+連続名前変更(&R)	= %K"@^R"
+ファイル名の交換(&S)	= *script %*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\rename_swap.js
+--	=
+PP&ffix	= *ppffix -ppc %#FDC
+}
+
+;#置き換えメニュー
+; 一行編集のAPPSキーで表示されるメニューの一部を置き換えます
+; メニュー項目ppm_fo_modeには通常"M_editcU"が展開されます。一行編集に"%se'fo_mode'"が
+; 設定されていると"M_editU%se'fo_mode'"が展開されます
+; ppm_fo_modeは必須項目、他は自由に編集できます
+;K_edit	= {
+;APPS	, *setcust M_editc:ppm_fo_mode=??M_editcU%se'fo_mode'
+;	%M_editc
+;}
+;-M_editc	= {
+;ppm_fo_mode	=
+;||	= 
+;元の編集メニュー(&B)\tShift+F10	= *defaultmenu
+;ファイルメニュー(&F)\tCtrl+]	= %k"^']'
+;編集メニュー(&M)\tCtrl+Q	= %k"^Q
+;設定メニュー(&S)\tShift+F2	= %k"\F2
+;--	= 
+;大-小文字変換(&W)\tCtrl+Q-U	= %k"^QU
+;全-半角変換(&Z)\tCtrl+K-Z	= %k"^KZ
+;管理者として実行(&R)\tESC-R	= %k"^']' R
+;||	= 
+;行番号(&J)\tCtrl+Q-J	= %k"^QJ
+;検索(&F)\tCtrl+F	= %k"^F
+;--	= 
+;お気に入り(&N)\tCtrl+Shift+P	= %k"^\P
+;PPcのパス(&L)\tCtrl+Shift+L	= %k"^\L
+;フォルダ名(&O)\tCtrl+Shift+D	= %k"^\D
+;ファイル名(&G)\tCtrl+Shift+I	= %k"^\I
+;パス挿入(&I)	= %M_editci
+;}
+;-M_editcU	= {
+;元に戻す(&U)\tCtrl+Z	= %k"^Z
+;--	= 
+;切り取り(&T)\tCtrl+X	= %k"^X
+;コピー(&C)\tCtrl+C	= %k"^C
+;貼り付け(&P)\tCtrl+V	= %k"^V
+;削除(&D)\tDelete	= %k"DEL
+;--	= 
+;全て選択(&A)\tCtrl+A	= %k"^A
+;}
+;-M_editcUrename	= {
+;反対窓ファイル名(&Y)	= *insert "%~Y"
+;--	= 
+;前に追加(&F)	= *replace ":%*edittext()%%C"
+;	*script %*getcust(S_ppm#global:lib)%\setSel.js,"(\:)(.*)%%C"
+;後ろに追加(&B)	 *replace ":%%X%*edittext().%%T"
+;	*script %*getcust(S_ppm#global:lib)%\setSel.js,"(\:%%X)(.*)\.%%T"
+;置換(&R)	= *linemessage s/対象文字/置換文字/[g][I]   ※:%%展開をOFF
+;	*replace "s/%*edittext()//"
+;	*script %*getcust(S_ppm#global:lib)%\setSel.js,"(s\/)(.*)\/\/"
+;連番(&N)	= *linemessage [\]=連番マクロ
+;	*replace ":%*edittext()\.%%T"
+;	*script %*getcust(S_ppm#global:lib)%\setSel.js,"(\:)(.*)\\\.%%T"
+;数字桁揃え(&S)	= *string o,digit=%*input("3" -title:"桁数" -mode:e)
+;	*replace ":%*edittext()%%*padding(%%*regexp(""""%%FXN"""",""""s/\D*(\d*)/\1/""""),%so"digit",0).%%T"
+;	*script %*getcust(S_ppm#global:lib)%\setSel.js,"(\:)(.*)%%\*padding.*"
+;拡張子一括(&E)	= *replace ":%%X.%T"
+;	*script %*getcust(S_ppm#global:lib)%\setSel.js,"(.*%%X\.)(.*)"
+;}
 [endsection]
 ;-------------------------------------------------------------------------------
 ;[linecust]
