:bug:Fix (要*ppmCOmpare)バグ修正
- M_editcUrenameの後ろに追加(&B)の区切り抜けを修正した

--- a/setting/patch.cfg
+++ b/setting/patch.cfg
@@ -163,7 +163,7 @@ PP&ffix	= *ppffix -ppc %#FDC
 ;--	= 
 ;前に追加(&F)	= *replace ":%*edittext()%%C"
 ;	*script %*getcust(S_ppm#global:lib)%\setSel.js,"(\:)(.*)%%C"
-;後ろに追加(&B)	 *replace ":%%X%*edittext().%%T"
+;後ろに追加(&B)	= *replace ":%%X%*edittext().%%T"
 ;	*script %*getcust(S_ppm#global:lib)%\setSel.js,"(\:%%X)(.*)\.%%T"
 ;置換(&R)	= *linemessage s/対象文字/置換文字/[g][I]   ※:%%展開をOFF
 ;	*replace "s/%*edittext()//"
