:sparkles:Update (要*ppmCompare)ここにコピーを追加
everythingで検索したパスをカレントにコピーする

--- a/setting/patch.cfg
+++ b/setting/patch.cfg
@@ -68,6 +68,10 @@ $undo = ^Z
 コピー(&C)	= *string o,path=%*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\s_copy.js
 	*if 1024==%*shiftkeys%:*script %sgo'path',1,0,2,0%:*stop
 	*script %sgo'path',1,0,0,0
+; everythingで検索した単一のエントリをカレントディレクトリにコピー(要ppm-etp)
+;ここにコピー(&E)	= *if !%*findwindowclass("EVERYTHING_(ETP)")%:*ppb -c *run -d:"%*getcust(S_ppm#user:etp_path)" Everything.exe -minimized -admin -instance ETP -connect localhost:%*getcust(_user:ETP_PORT) -drive-links
+;	*string o,path=%*input("" -title:"このディレクトリにコピー" -mode:e -k *completelist -module:on -detail:"user module" -file:"%*getcust(S_ppm#global:cache)\list\ETOPTION.txt")
+;	*ppcfile !copy,%1,-src:"%so'path'" -min -same:5 -nocount -qstart
 重複コピー(&F)	= *ppcfile !Copy,"%1",-qstart -min -nocount -preventsleep -same:5 -log:off -compcmd:%%K"@^PDOWN"
 シンボリックリンク(&S)	= *script %*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\s_copy.js,2,0,0,0
 マルチコピー(&V)	= *string o,path=%*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\multi_copy.js
