:sparkles:Update (要*ppmCompare)リネーム用キー追加

--- a/setting/base.cfg
+++ b/setting/base.cfg
@@ -8,14 +8,14 @@ $replace:rename_u	, *checkoffmark
 	*if 4==%so'dirtype'%:%K"@R"%:*stop
 	*ifmatch "63;96",%so'dirtype'%:*linemessage !"Not supported in archive%:*stop
 	*ifmatch /^aux:.*/,%FDV%:%K"@R"%:*stop
-	*ppcfile !rename -min -same:skip -error:dialog -undolog:on -log:off -name:"%*input("%C" -title:"Rename" -mode:Ec -select:fs)"
+	*ppcfile !rename -min -same:skip -error:dialog -undolog:on -log:off -name:"%*input("%C" -title:"Rename" -mode:Ec -select:fs -k *mapkey use,K_ppmRename)"
 $replace:rename_ua	, *checkoffmark
 	*if 1==%*js("PPx.Result=PPx.EntryState;")%:*stop
 	*string o,dirtype=%*js("PPx.Result=PPx.DirectoryType;")
 	*if 4==%so'dirtype'%:%K"@R"%:*stop
 	*ifmatch "63;96",%so'dirtype'%:*cd %*temp%:%Obd reces /mn%C:%*input("%*regexp("%FC","s/(.*\\)(.*)/$1|$2|/")" -title:"[?inarc_rename:書庫内ファイル名の変更]" -mode:Ec -select:i) %FD%&%K"@^F5"%:*stop
 	*ifmatch /^aux:.*/,%FDV%:%K"@R"%:*stop
-	*ppcfile !rename -min -same:skip -error:dialog -undolog:on -log:off -name:"%*input("%C" -title:"Rename" -mode:Ec -select:fs)"
+	*ppcfile !rename -min -same:skip -error:dialog -undolog:on -log:off -name:"%*input("%C" -title:"Rename" -mode:Ec -select:fs -k *mapkey use,K_ppmRename)"
 $replace:move	, %M_ppmMove,[?cursor_move:M]
 $replace:copy	, %M_ppmCopy,[?cursor_copy:C]
 $replace:delete	, *string p,fo_delMenuPlefix=d
@@ -23,6 +23,10 @@ $replace:delete	, *string p,fo_delMenuPlefix=d
 	%M_ppmDelete,[?cursor_delete:D]
 	*string p,fo_delMenuPlefix=
 $replace:undo	, *script %*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\s_undo.js
+}
+K_ppmRename	= {
+$replace:selectname	, *cursor -8
+$replace:selectext	, *cursor -9
 }
 S_ppm#user	= {
 @default:fo_trash	= %*name(HP,"%FD")
