--- a/setting/patch.cfg
+++ b/setting/patch.cfg
@@ -48,10 +48,16 @@ $undo = ^Z
 
 ;#S_ppm#user
 ; deleted$(safedelete)の親パス
-@fo_trash = %*name(HP,"%FD")
+@fo_trash = %*name(HP,"%FDN")
 
 ; fastcopy/fcp.exeの親パス
 @fo_fastcopy = 
+
+;#K_ppmRename
+; filename.extのfilenameを選択するキー
+$selectname = ^H
+; filename.extのextを選択するキー
+$selectext = ^L
 
 ;-------------------------------------------------------------------------------
 [section]
@@ -115,6 +121,7 @@ KC_main	= {l
 ;	*ppcfile rename -same:skip -log:off
 ^R	, %M_ppmRename,R
 }
+-K_ppmRename =
 -M_ppmRename	= {
 連続名前変更(&R)	= %K"@^R"
 ファイル名の交換(&S)	= *script %*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\rename_swap.js
