feat!: (要*ppmCompare) ppmの新仕様に対応した
BREAKING CHANGE:
- QuickJSに対応した
- 旧版のスクリプトを削除した

fileCopy.js -> copyFile.js
- 書庫内ファイルのコピーは%u7-zip.dllから*unpackを使うように変更した
- fcp.exeでのコピーは廃止しfastcopy.exeのみ使うようにした

fileDelete.js -> deleteFile.js
- 不要ファイル一括削除を追加した

--- a/setting/base.cfg
+++ b/setting/base.cfg
@@ -22,13 +22,16 @@ $replace:delete	, *string p,fo_delMenuPlefix=d
 	*if 4==%*js("PPx.Result=PPx.DirectoryType")%:*string p,fo_delMenuPlefix=0
 	%M_ppmDelete,[?cursor_delete:D]
 	*string p,fo_delMenuPlefix=
-$replace:undo	, *script %*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\s_undo.js
+$replace:undo	, *script [?repopath:%sgu'ppmrepo']\ppm-fileoperation\dist\undo.js
 }
 K_ppmRename	= {
 $replace:selectname	, *cursor -8
 $replace:selectext	, *cursor -9
 }
 S_ppm#user	= {
+@default:fo_datetime	= 
+@default:fo_fcdir	= 
+@default:fo_fcoptions	= /auto_close /force_start=2 /verify /error_stop /log=false /postproc=false
+@default:fo_options	= -qstart -nocount -preventsleep -sameall -undolog
 @default:fo_trash	= %*name(HP,"%FD")
-@default:fo_fastcopy	= 
 }
