--- a/setting/patch.cfg
+++ b/setting/patch.cfg
@@ -1,143 +1,161 @@
 ﻿;ppm-fileoperation
-;
-; @name、?nameは設定値です。コメントアウト又は空にすることで初期値を適用
-; $nameはキー設定です。コメントアウト又は空にすることでキー設定を無効化できます
-; [section]と[endsection]の間には自由に設定を追加できます
-; [section]内で追加するテーブル項目は削除時には通常プロパティ単位で削除しますが
-; メニューラベルの頭に"-"を付けるとテーブルごと削除します
-; テーブルの削除のみが目的の場合は"-ラベル ="とします
-; [linecust]と[endlinecust]の間には"label,command"の書式で*linecustを設定可能
-; [linecust]内%のエスケープに%(%)は使わないでください。コマンドが重複して
-; 登録される可能性があります
 ;-------------------------------------------------------------------------------
+;;ローカルインストールした場合はプラグインの親ディレクトリパスを指定する(開発者用)
+;?repopath = %sgu'ppmrepo'
 
-;#A_exec
-; reces.exeのパス(パスが通っていない場合に指定する)
-; 書庫内ファイルのリネームに使用
+;;#A_exec
+;;reces.exeのパス(パスが通っていない場合に指定する)
+;;※書庫内ファイルのリネームに使用
 ;@reces = 
 
-;#KC_main
-; アンドゥ対応リネーム
+;;#KC_main
+;;アンドゥ対応リネーム
 $rename_u = R
-
-; アンドゥ+書庫内ファイル対応リネーム(要reces)
+;;アンドゥ+書庫内ファイル対応リネーム(要reces)
 ;$rename_ua = R
-; 書庫内リネームのタイトル
+;;書庫内リネームのタイトル
 ;?inarc_rename = 書庫内ファイル名の変更
 
-; 移動メニューを呼び出すキー
-$move = M
+;;*ppcfile(move,copy)のオプション
+;;※-min, -same はスクリプト内で付加されます
+@fo_options = -qstart -nocount -preventsleep -sameall -undolog
 
-; 移動メニューのカーソル位置
+;;結果ログに表示する日時の書式(PPXTEXT.DLLの%*nowdatetime)
+;@fo_datetime = H:M:S
+
+;;移動メニューを呼び出すキー
+$move = M
+;;移動メニューの初期カーソル位置
 ?cursor_move = M
 
-; 複製メニューを呼び出すキー
+;;複製メニューを呼び出すキー
 $copy = C
-
-; 複製メニューのカーソル位置
+;;複製メニューの初期カーソル位置
 ?cursor_copy = C
 
-; 削除メニューを呼び出すキー
+;;削除メニューを呼び出すキー
 $delete = D
-
-; 削除メニューのカーソル位置
+;;削除メニューの初期カーソル位置
 ?cursor_delete = D
 
-; Undoの実行キー
+;;Undo/Redoの実行キー
 $undo = ^Z
 
-;#S_ppm#user
-; deleted$(safedelete)の親パス
+;;#S_ppm#user
+;;deleted$(safedelete)の親パス
 @fo_trash = %*name(HP,"%FDN")
 
-; fastcopy/fcp.exeの親パス
-@fo_fastcopy = 
+;;fastcopy.exeの親パス
+;@fo_fcdir = 
+;;fastcopyのオプション
+;;※/cmd /filelog /no_exec /to はスクリプト内で追加されます
+;@fo_fcoptions = /auto_close /force_start=2 /verify /error_stop /log=false /postproc=false
 
-;#K_ppmRename
-; filename.extのfilenameを選択するキー
+;;#K_ppmRename(undo対応リネーム時キーバインド)
+;;filename.extを対象に<filename>を選択するキー
 $selectname = ^H
-; filename.extのextを選択するキー
+;;filename.extを対象に<ext>を選択するキー
 $selectext = ^L
 
 ;-------------------------------------------------------------------------------
 [section]
+/dist	= %sgu'ppmrepo'\ppm-fileoperation\dist
+/safedel	= *execute C,*ppcfile !safedelete,%*getcust(S_ppm#user:fo_trash)%%\,-min -retry:0 -error:ignore -undolog:on -nocount -qstart
+/msg_dir_name	= ディレクトリ名を指定
+/msg_copy_here	= カレントディレクトリにコピー
+/msg_thumb_del	= サムネイル削除
+/msg_safedel	= SafeDeleteを実行します
+/msg_arc_del	= 書庫から削除します
 -M_ppmMove	= {
-移動(&M)	= *string o,path=%*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\s_move.js
+移動(&M)	= *string o,path=[/dist]\moveFile.js
 	*if 1024==%*shiftkeys%:*script %sgo'path',1,0,0,0,0,2%:*stop
-	*script %sgo'path',1,1,0,0,0,3
-一つ上に移動(&U)	= *script %*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\s_move.js,1,1,0,0,1,3
-ディレクトリにまとめる(&K)	= *ppcfile !move,"%FDN\%"ppm-fileoperation ディレクトリ名を指定"%{%*now(date)%}",-min -qstart -nocount -log:off -querycreatedirectory:off
+	*script %sgo'path',1,0,0,0,0,3
+一つ上に移動(&U)	= *script [/dist]\moveFile.js,1,1,0,0,1,3
+ディレクトリにまとめる(&K)	= *ppcfile !move,"%FDN\%"ppm-fileoperation [/msg_dir_name]"%{%*now(date)%}",-min -qstart -nocount -log:off -querycreatedirectory:off
 -- =
-詳細設定(&D)	= *script %*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\s_move.js,0,0,0,0
+詳細設定(&D)	= *script [/dist]\moveFile.js
 }
 -M_ppmCopy	= {
-コピー(&C)	= *string o,path=%*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\s_copy.js
-	*if 1024==%*shiftkeys%:*script %sgo'path',1,0,2,0%:*stop
-	*script %sgo'path',1,0,0,0
-; everythingで検索した単一のエントリをカレントディレクトリにコピー(要ppm-etp)
-;ここにコピー(&E)	= *if !%*findwindowclass("EVERYTHING_(ETP)")%:*ppb -c *run -d:"%*getcust(S_ppm#user:etp_path)" Everything.exe -minimized -admin -instance ETP -connect localhost:%*getcust(_user:ETP_PORT) -drive-links
-;	*string o,path=%*input("" -title:"このディレクトリにコピー" -mode:e -k *completelist -module:on -detail:"user module" -file:"%*getcust(S_ppm#global:cache)\list\ETOPTION.txt")
+コピー(&C)	= *string o,path=[/dist]\copyFile.js
+	*if 1024==%*shiftkeys%:*script %sgo'path',1,0,2%:*stop
+	*script %sgo'path',1,0,0
+;;everythingで検索した単一のエントリをカレントディレクトリにコピー(要ppm-etp)
+;ここにコピー(&E)	= *string o,class=EVERYTHING_(ETP)
+;	*if !%*findwindowclass("%so'class'")%:*ppb -c *run -d:"%*getcust(S_ppm#user:etp_path)" Everything.exe -minimized -admin -instance ETP -connect localhost:%*getcust(_user:ETP_PORT) -drive-links
+;	*string o,path=%*input("" -title:"[/msg_copy_here]" -mode:e -k *completelist -module:on -detail:"user module" -file:"%sgu'ppmcache'\complist\ETOPTION.txt")
 ;	*ppcfile !copy,%1,-src:"%so'path'" -min -same:5 -nocount -qstart
 重複コピー(&F)	= *ppcfile !Copy,"%1",-qstart -min -nocount -preventsleep -same:5 -log:off -compcmd:%%K"@^PDOWN"
-シンボリックリンク(&S)	= *script %*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\s_copy.js,2,0,0,0
-マルチコピー(&V)	= *string o,path=%*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\multi_copy.js
-	*if 1024==%*shiftkeys%:*script %sgo'path',0,1,-qstart%:*stop
-	*script %sgo'path',0,0,-qstart
-マルチリンク(&B) = *script %*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\multi_copy.js,2,0,-qstart
+シンボリックリンク(&S)	= *script [/dist]\copyFile.js,2,0,0
+マルチコピー(&V)	= *string o,path=[/dist]\multiCopy.js
+;;ppcfile -sameall -same:<arg1> -log:off -undolog:off -querycreatedirectory:off -dest は自動で追加されます
+	*string o,opt="-min -qstart -checkexistfirst -nocount"
+	*if 1024==%*shiftkeys%:*script %sgo'path',0,1,%so'opt'%:*stop
+	*script %sgo'path',0,0,%so'opt'
+;;fastcopy /cmd=<arg1> /filelog=%*temp\fastcopy.log /postproc=false /to は自動で追加されます
+;	*string o,opt="/auto_close /force_start=2 /verify /error_stop /log=false"
+;	*if 1024==%*shiftkeys%:*script %sgo'path',1,1,%so'opt'%:*stop
+;	*script %sgo'path',1,0,%so'opt'
+マルチリンク(&B) = *script [/dist]\multiCopy.js,2,0
 -- =
-詳細設定(&D)	= *script %*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\s_copy.js
+詳細設定(&D)	= *script [/dist]\copyFile.js
 }
 -M_ppmDelete	= {
 削除(&D)	= *string o,dirtype=%*js("PPx.result=PPx.DirectoryType;")
-	*if 9==%so"dirtype"%:*delete "%C"%:*js "PPx.EntryState=1;"%:*linemessage delete thumbnail%:*stop
-	*ifmatch /^aux:.*/,%FD%:%K"@\D%:*stop
+	*if 9==%so"dirtype"%:*delete "%C"%:*js "PPx.EntryState=1;"%:*linemessage [/msg_thumb_del]%:*stop
+	*ifmatch /^aux:.*/,"%FDN"%:%K"@\D"%:*stop
 	*if 4==%so"dirtype"%:%K"@^\D"%:*stop
-	*if !0%*script(%*getcust(S_ppm#global:lib)\exists.js,bool,both,%#,FDC)%:*logwindow "対象に実体のないパスが含まれています"%:*stop
-	*execute C,*ppcfile !safedelete,%*getcust(S_ppm#user:fo_trash)%%\,-min -retry:0 -error:ignore -undolog:on -nocount -qstart
-;@@ FileSystemを利用したバックグラウンド削除 ↓を利用するときは↑をコメントアウト
-; 	*script %*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\s_delete.js,0,0
-?%sp"fo_delMenuPlefix";実体削除(&R)	= *ifmatch /^aux:.*/,%FD %: %K"@\D" %: *stop
-	*if !0%*script(%*getcust(S_ppm#global:lib)\exists.js,bool,both,%#,FDC)%:%"ppm-fileoperation"%I"対象に実体のないパスが含まれています"%:*stop
-	 %"ppm-fileoperation"%Q"SafeDeleteを実行します"
-	 *execute C,%Oa *ppcfile !safedelete,%*getcust(S_ppm#user:fo_trash)%%\,-min -retry:0 -error:ignore -undolog:off -nocount -qstart -compcmd %K"@^\D"
+	[/safedel]
+;;※FileSystemを利用したバックグラウンド削除 ↓を利用するときは、↑をコメントアウト
+;	*script [/dist]\deleteFile.js
+?%sp"fo_delMenuPlefix";実体削除(&R)	= *ifmatch /^aux:.*/,"%FDN"%:%K"@\D"%:*stop
+	 %"ppm-fileoperation"%Q"[/msg_safedel]"
+	 [/safedel] -compcmd %K"@^\D"
 消去(&C)	= *string o,dirtype=%*js(PPx.result=PPx.DirectoryType;)
-	*if 9==%so"dirtype"%:*delete "%C"%:*js "PPx.EntryState=1;"%:*linemessage delete thumbnail%:*stop
-	*if 62<=%so"dirtype"%:%"ppm-fileoperation"%Q"書庫から削除します"%:%OTsq %u7-zip64.dll,d -hide %FD %@%:*wait 1000,2%:*jumppath -update -savelocate%:*stop
-	*if !0%*script(%*getcust(S_ppm#global:lib)\exists.js,bool,both,%#,FDC)%:*linemessage !"対象に実体のないパスが含まれています%:*stop
+	*if 9==%so"dirtype"%:*delete "%C"%:*js "PPx.EntryState=1;"%:*linemessage [/msg_thumb_del]%:*stop
+	*if 62<=%so"dirtype"%:%"ppm-fileoperation"%Q"[/msg_arc_del]"%:%OTsq %u7-zip64.dll,d -hide %FD %@%:*wait 1000,2%:*jumppath -update -savelocate%:*stop
 	*execute C,*ppcfile delete -symdel:sym -retry:0 -error:ignore -undolog:off -nocount -waittilldone:on -waitresult:on -compcmd %K"@^\D"
-;@@ 要fcp.exe
-; ワイプ削除(&W)	= *string o,dirtype=%*js(PPx.result=PPx.DirectoryType;)
-; 	*if 62<=%so"dirtype"%:%"ppm-fileoperation"%Q"書庫から削除します"%:%OTsq %u7-zip64.dll,d -hide %FD %@%:%K"@F5"%:*stop
-; 	*if !0%*script(%*getcust(S_ppm#global:lib)\exists.js,bool,both,%#,FDC)%:%"ppm-fileoperation"%I"対象に実体のないパスが含まれています"%:*stop
-; 	*string o,path=%#;FDC
-; 	%"FastCopy wipe_del%Q"%*regexp(%so"path",tr/;/\n/) %: %Obd "%*getcust(S_ppm#user:fo_fastcopy)\fcp.exe" /cmd=delete /wipe_del %*regexp(%so"path", "s/;/ /g")
-マルチ削除(&V)	= *script %*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\multi_delete.js,-qstart
+;;※要fcp.exe
+;ワイプ削除(&W)	= *string o,dirtype=%*js(PPx.result=PPx.DirectoryType;)
+;	*if 62<=%so"dirtype"%:%"ppm-fileoperation"%Q"[/msg_arc_del]"%:%OTsq %u7-zip64.dll,d -hide %FD %@%:%K"@F5"%:*stop
+;	*string o,path=%#;FDC
+;	%"FastCopy wipe deletion%Q"%*regexp(%so"path",tr/;/\n/) %: %Obd "%*getcust(S_ppm#user:fo_fastcopy)\fcp.exe" /cmd=delete /wipe_del %*regexp(%so"path", "s/;/ /g")
+マルチ削除(&V)	= *script [/dist]\multiDelete.js,-qstart
+-- =
+;;FileSystemObject.DeleteFile/DeleteFolderを実行します
+;; - 第一引数を"0"以外に設定するとテスト実行します
+;; - コマンド実行時に"Shift"キーを押しているとcleanup.txtを編集できます
+;; - cleanup.txtには削除パスを記述します。カンマ区切りで一列内に収めてください
+;;   - パスの指定方法はDeleteFile/DelteFolder関数と同じです
+;;   - 読み取り専用ファイルは削除対象です
+;不要ファイル削除(&B)	= *if 1024==%*shiftkeys%:*ppe %sgu'ppmcache'\list\cleanup.txt%:*stop
+;	*script [/dist]\cleanup.js,1
 }
 
-KC_main	= {l
-; Appsキーにリネームメニューを追加(下方の置き換えメニューの設定が必要)
+KC_main	= {
+;;リネーム(一行編集のAppsキーに置き換えメニューを適用)
 ;\R	, *linecust editc,K_edit:FIRSTEVENT,*string e,fo_mode=rename%%:*linecust editc,K_edit:FIRSTEVENT,
-;	*ifmatch "63;96",%*js("PPx.Result=PPx.DirectoryType;")%:*linemessage !"Not supported in archive%:*stop
+;	*ifmatch "63;96",%*js("PPx.Result=PPx.DirectoryType;")%:*linemessage !"書庫内は非対応です%:*stop
 ;	*ppcfile rename -same:skip -log:off
+;;リネームメニュー
 ^R	, %M_ppmRename,R
 }
 -K_ppmRename =
 -M_ppmRename	= {
 連続名前変更(&R)	= %K"@^R"
-ファイル名の交換(&S)	= *script %*getcust(S_ppm#plugins:ppm-fileoperation)\script\%*getcust(S_ppm#global:scripttype)\rename_swap.js
+ファイル名の交換(&S)	= *script [/dist]\renameSwap.js
 --	=
 PP&ffix	= *ppffix -ppc %#FDC
 }
 
-;#置き換えメニュー
-; 一行編集のAPPSキーで表示されるメニューの一部を置き換えます
-; メニュー項目ppm_fo_modeには通常"M_editcU"が展開されます。一行編集に"%se'fo_mode'"が
-; 設定されていると"M_editU%se'fo_mode'"が展開されます
-; ppm_fo_modeは必須項目、他は自由に編集できます
+;;置き換えメニュー
+;; 一行編集のAPPSキーで表示されるメニュー内の一部を置き換えます
+;; メニュー項目ppm_fo_modeには通常"M_editcU"が展開されます。一行編集に"%se'fo_mode'"が
+;; 設定されているとき"M_editcU%se'fo_mode'"が展開されます
 ;K_edit	= {
 ;APPS	, *setcust M_editc:ppm_fo_mode=??M_editcU%se'fo_mode'
 ;	%M_editc
 ;}
+;;M_editc:ppm_fo_modeは必須項目。他は自由に変更できます
 ;-M_editc	= {
 ;ppm_fo_mode	=
 ;||	= 
@@ -193,27 +211,52 @@ PP&ffix	= *ppffix -ppc %#FDC
 ;[linecust]
 ;[endlinecust]
 ;-------------------------------------------------------------------------------
+;[execute]
+;[endexecute]
+;-------------------------------------------------------------------------------
 ; スクリプト引数の説明
-; s_mov.js,0,1,2,3,4,5
-;	0,移動方法	0=詳細|1=即時
-;	1,移動手段	0=*ppcfile|1=FileSystem-MoveFile(重複:スキップ)|2=FileSystem-MoveFile(重複:送り先リネーム)
-;	2,ファイルごとの結果をログ窓出力	0=しない|1=する
-;	3,最後にエントリリストを更新	0=しない|1=する
-;	4,一階層上にファイルを移動	0=しない|1=する
-;	5,同名ファイルの処理方法(*ppcfile -sameオプションの値)
-; s_copy.js,1,2,3,4
+; moveFile.js,0,1,2,3,4,5
+;	0,即時実行	0=しない|1=する
+;	1,処理方法	0=*ppcfile|1=FileSystem MoveFile(同名:スキップ)
+;	2,1ファイルごとに結果をログ窓出力	0=しない|1=する
+;	3,最後にエントリリストを更新		0=しない|1=する
+;	4,送り先を一階層上のディレクトリに	0=しない|1=する
+;	5,*ppcfile 同名ファイル処理方法(-sameオプションの値:初期値=3(skip))
+; copyFile.js,1,2,3,4
 ;	0,コピー方法	0=詳細|1=即時|2=詳細(symlink)|3=即時(symlink)
 ;	1,コピー手段	0=*ppcfile|1=FastCopy(fcp.exe)
 ;	2,同名ファイルの処理方法	0=skip|1=更新|2=上書き
-;	3,ファイルごとの結果をログ窓出力	0=しない|1=する
 ;	4,symlink時に管理者権限PPbを使うならタスク名を指定
-; s_delete.js,0,1
+; deleteFile.js,0,1
 ;	0,ファイルごとの結果をログ窓出力	0=しない|1=する
-;	1,最後にエントリリストを更新	0=しない|1=する
-; multi_copy.js,0,1,2,3
+;	1,更新後にエントリリストを更新	0=しない|1=する
+; multiCopy.js,0,1,2,3
 ;	0,コピー手段	0=*ppcfile|1=FastCopy(fcp.exe)|2=symlink
 ;	1,同名ファイルの処理方法	0=skip|1=更新|2=上書き
 ;	2,*ppcfileの追加オプション
 ;	3,symlink時に管理者権限PPbを使うならタスク名を指定
 ; multi_delete.js,0
 ;	0,*ppcfileの追加オプション
+;-------------------------------------------------------------------------------
+; @nameは設定値です。コメントアウト又は空にすることで初期値を適用します
+; @nameの値は複数行に記述できます。二行め以降はTAB文字で開始する必要があります
+; $nameは設定キーです。コメントアウト又は空にすることでキー設定を無効化できます
+; $nameの値は一行に収めてください
+; ?nameは設定値です。コメントアウト又は空にすることで初期値を適用します
+; ?nameの値は一行に収めてください
+; [section]と[endsection]の間には自由に設定を追加できます
+; [section]内で追加するテーブル項目は削除時には通常プロパティ単位で削除しますが
+;   ID名の頭に"-"を付けるとテーブルごと削除します
+;   テーブルの削除のみが目的の場合は"-<ID> ="とします
+;   A_xxx,X_xxx,XB_xxx,XC_xxx,XV_xxx,KC_main,KV_mainは削除対象外です
+; [section]の冒頭に"/<name> = <value>"が記述されていると[section]内の[/<name>]を
+;   <value>に置換します。正規表現を使用しているため<name>にはメタ文字の使用を
+;   避け、英数字を使ってください
+; [linecust]と[endlinecust]の間には*linecustを設定できます
+;   "<label>,<ID[:SubID]><=param|,command>"の形式で記述します
+;   複数行の既述はできません
+; [execute]と[endexecute]の間にはコマンドを設定できます
+;   コマンドはPPx.Execute()にそのまま代入され、*ppmSet実行時に
+;   一行ずつ順番に実行されます
+;-------------------------------------------------------------------------------
+; vim:tw=79:ts=8:sw=8:sts=0:norl:noet:fen:ft=PPxcfg
