fix(cleanUp.ts): 不要ファイル削除の処理方法を変更

--- a/setting/patch.cfg
+++ b/setting/patch.cfg
@@ -122,13 +122,13 @@ $selectext = ^L
 マルチ削除(&V)	= *script [/dist]\multiDelete.js,-qstart
 -- =
 ;;FileSystemObject.DeleteFile/DeleteFolderを実行します
-;; - 第一引数を"0"以外に設定するとテスト実行します
+;; - 第一引数を"0"以外に設定するとPPXNNN.TMPを削除対象に含めます
 ;; - コマンド実行時に"Shift"キーを押しているとcleanup.txtを編集できます
-;; - cleanup.txtには削除パスを記述します。カンマ区切りで一列内に収めてください
-;;   - パスの指定方法はDeleteFile/DelteFolder関数と同じです
-;;   - 読み取り専用ファイルは削除対象です
+;; - cleanup.txtには削除パスを記述します。セミコロンかカンマ区切りで一列内に収めてください
+;;   - パスは*whereisのパス指定方法と同じです
+;;   - 読み取り専用ファイルも削除対象です
 ;不要ファイル削除(&B)	= *if 1024==%*shiftkeys%:*ppe %sgu'ppmcache'\list\cleanup.txt%:*stop
-;	*script [/dist]\cleanup.js,1
+;	*script [/dist]\cleanup.js
 }
 
 KC_main	= {
