feat: (要*ppmCompare) リネームの設定内容を更新した

--- a/setting/patch.cfg
+++ b/setting/patch.cfg
@@ -9,6 +9,8 @@
 ;@reces = 
 
 ;;#KC_main
+;;※他のプラグインのリネーム設定と共存させたい場合は
+;;  ここでの設定をOFFにして*linecustに登録する方法があります
 ;;アンドゥ対応リネーム
 $rename_u = R
 ;;アンドゥ+書庫内ファイル対応リネーム(要reces)
@@ -121,7 +123,7 @@ $selectext = ^L
 ;	%"FastCopy wipe deletion%Q"%*regexp(%so"path",tr/;/\n/) %: %Obd "%*getcust(S_ppm#user:fo_fastcopy)\fcp.exe" /cmd=delete /wipe_del %*regexp(%so"path", "s/;/ /g")
 マルチ削除(&V)	= *script [/dist]\multiDelete.js,-qstart
 -- =
-;;FileSystemObject.DeleteFile/DeleteFolderを実行します
+;;*ppcfile deleteを実行します
 ;; - 第一引数を"0"以外に設定するとPPXNNN.TMPを削除対象に含めます
 ;; - コマンド実行時に"Shift"キーを押しているとcleanup.txtを編集できます
 ;; - cleanup.txtには削除パスを記述します。セミコロンかカンマ区切りで一列内に収めてください
@@ -208,7 +210,13 @@ PP&ffix	= *ppffix -ppc %#FDC
 ;}
 [endsection]
 ;-------------------------------------------------------------------------------
+;;他のプラグインとリネーム設定を共存させる方法
+;; 予め次の設定をしておいて、[linecust][endlinecust]のコメントを外す
+;; KC_main:R	,%mPlugin1 ...
+;; 		%mPlugin2 ...
+;; 		%mfo %K"@R"
 ;[linecust]
+;fo,KC_main:R,*ppcfile !rename -min -same:skip -error:dialog -undolog:on -log:off -name:"%%*input("%%C" -title:"Rename" -mode:Ec -k *cursor -8%%%%:*mapkey use,K_ppmRename)"
 ;[endlinecust]
 ;-------------------------------------------------------------------------------
 ;[execute]
