fix: (要*ppmCompare) ppm本体の更新に対応した
- setsel.js -> setsel.stay.js の改名に対応した

--- a/setting/patch.cfg
+++ b/setting/patch.cfg
@@ -193,20 +193,20 @@ PP&ffix	= *ppffix -ppc %#FDC
 ;反対窓ファイル名(&Y)	= *insert "%~Y"
 ;--	= 
 ;前に追加(&F)	= *replace ":%*edittext()%%C"
-;	*script %*getcust(S_ppm#global:lib)%\setSel.js,"(\:)(.*)%%C"
+;	*script %*getcust(S_ppm#global:lib)%\setsel.stay.js,"(\:)(.*)%%C"
 ;後ろに追加(&B)	= *replace ":%%X%*edittext().%%T"
-;	*script %*getcust(S_ppm#global:lib)%\setSel.js,"(\:%%X)(.*)\.%%T"
+;	*script %*getcust(S_ppm#global:lib)%\setsel.stay.js,"(\:%%X)(.*)\.%%T"
 ;置換(&R)	= *linemessage s/対象文字/置換文字/[g][I]   ※:%%展開をOFF
 ;	*replace "s/%*edittext()//"
-;	*script %*getcust(S_ppm#global:lib)%\setSel.js,"(s\/)(.*)\/\/"
+;	*script %*getcust(S_ppm#global:lib)%\setsel.stay.js,"(s\/)(.*)\/\/"
 ;連番(&N)	= *linemessage [\]=連番マクロ
 ;	*replace ":%*edittext()\.%%T"
-;	*script %*getcust(S_ppm#global:lib)%\setSel.js,"(\:)(.*)\\\.%%T"
+;	*script %*getcust(S_ppm#global:lib)%\setsel.stay.js,"(\:)(.*)\\\.%%T"
 ;数字桁揃え(&S)	= *string o,digit=%*input("3" -title:"桁数" -mode:e)
 ;	*replace ":%*edittext()%%*padding(%%*regexp(""""%%FXN"""",""""s/\D*(\d*)/\1/""""),%so"digit",0).%%T"
-;	*script %*getcust(S_ppm#global:lib)%\setSel.js,"(\:)(.*)%%\*padding.*"
+;	*script %*getcust(S_ppm#global:lib)%\setsel.stay.js,"(\:)(.*)%%\*padding.*"
 ;拡張子一括(&E)	= *replace ":%%X.%T"
-;	*script %*getcust(S_ppm#global:lib)%\setSel.js,"(.*%%X\.)(.*)"
+;	*script %*getcust(S_ppm#global:lib)%\setsel.stay.js,"(.*%%X\.)(.*)"
 ;}
 [endsection]
 ;-------------------------------------------------------------------------------
