fix(typo): QuickJSで動かなかったので修正した

--- a/setting/patch.cfg
+++ b/setting/patch.cfg
@@ -136,7 +136,7 @@ $selectext = ^L
 KC_main	= {
 ;;リネーム(一行編集のAppsキーに置き換えメニューを適用)
 ;\R	, *linecust editc,K_edit:FIRSTEVENT,*string e,fo_mode=rename%%:*linecust editc,K_edit:FIRSTEVENT,
-;	*ifmatch "63;96",%*js("PPx.Result=PPx.DirectoryType;")%:*linemessage !"書庫内は非対応です%:*stop
+;	*ifmatch "63;96",%*js("PPx.result=PPx.DirectoryType;")%:*linemessage !"書庫内は非対応です%:*stop
 ;	*ppcfile rename -same:skip -log:off
 ;;リネームメニュー
 ^R	, %M_ppmRename,R
