--- a/setting/base.cfg
+++ b/setting/base.cfg
@@ -3,15 +3,15 @@
 }
 KC_main	= {
 $replace:rename_u	, *checkoffmark
-	*if 1==%*js("PPx.Result=PPx.EntryState;")%:*stop
-	*string o,dirtype=%*js("PPx.Result=PPx.DirectoryType;")
+	*if 1==%*js("PPx.result=PPx.EntryState;")%:*stop
+	*string o,dirtype=%*js("PPx.result=PPx.DirectoryType;")
 	*if 4==%so'dirtype'%:%K"@R"%:*stop
 	*ifmatch "63;96",%so'dirtype'%:*linemessage !"Not supported in archive%:*stop
 	*ifmatch /^aux:.*/,%FDV%:%K"@R"%:*stop
 	*ppcfile !rename -min -same:skip -error:dialog -undolog:on -log:off -name:"%*input("%C" -title:"Rename" -mode:Ec -k :cursor -8%%:*mapkey use,K_ppmRename)"
 $replace:rename_ua	, *checkoffmark
-	*if 1==%*js("PPx.Result=PPx.EntryState;")%:*stop
-	*string o,dirtype=%*js("PPx.Result=PPx.DirectoryType;")
+	*if 1==%*js("PPx.result=PPx.EntryState;")%:*stop
+	*string o,dirtype=%*js("PPx.result=PPx.DirectoryType;")
 	*if 4==%so'dirtype'%:%K"@R"%:*stop
 	*ifmatch "63;96",%so'dirtype'%:*cd %*temp%:%Obd reces /mn%C:%*input("%*regexp("%FC","s/(.*\\)(.*)/$1|$2|/")" -title:"[?inarc_rename:書庫内ファイル名の変更]" -mode:Ec -select:i) %FD%&%K"@^F5"%:*stop
 	*ifmatch /^aux:.*/,%FDV%:%K"@R"%:*stop
@@ -19,7 +19,7 @@ $replace:rename_ua	, *checkoffmark
 $replace:move	, %M_ppmMove,[?cursor_move:M]
 $replace:copy	, %M_ppmCopy,[?cursor_copy:C]
 $replace:delete	, *string p,fo_delMenuPlefix=d
-	*if 4==%*js("PPx.Result=PPx.DirectoryType")%:*string p,fo_delMenuPlefix=0
+	*if 4==%*js("PPx.result=PPx.DirectoryType")%:*string p,fo_delMenuPlefix=0
 	%M_ppmDelete,[?cursor_delete:D]
 	*string p,fo_delMenuPlefix=
 $replace:undo	, *script [?repopath:%sgu'ppmrepo']\ppm-fileoperation\dist\undo.js
