feat: 新規ファイル作成コマンドを追加した
新規ファイル作成ダイアログではリネーム用の追加キーを使えます

--- a/setting/patch.cfg
+++ b/setting/patch.cfg
@@ -40,6 +40,9 @@ $delete = D
 ;;削除メニューの初期カーソル位置
 ?cursor_delete = D
 
+;;新規ファイル作成 ※ リネーム時キーバインドが使えます
+;$newfile = ^N
+
 ;;Undo/Redoの実行キー
 $undo = ^Z
 
