--- a/setting/base.cfg
+++ b/setting/base.cfg
@@ -8,7 +8,7 @@ $replace:rename_u	, *checkoffmark
 	*if 4==%so'dirtype'%:%K"@R"%:*stop
 	*ifmatch "63;96",%so'dirtype'%:*linemessage !"Not supported in archive%:*stop
 	*ifmatch /^aux:.*/,%FDV%:%K"@R"%:*stop
-	*ppcfile !rename -min -same:skip -error:dialog -undolog:on -log:off -name:"%*input("%C" -title:"Rename" -mode:Ec -k :cursor -8%%:*mapkey use,K_ppmRename)"
+	*ppcfile !rename -min -same:skip -error:dialog -undolog:on -log:off -name:"%*input("%C" -title:"Rename" -mode:Ec -k *cursor -8%%:*mapkey use,K_ppmRename)"
 $replace:rename_ua	, *checkoffmark
 	*if 1==%*js("PPx.result=PPx.EntryState;")%:*stop
 	*string o,dirtype=%*js("PPx.result=PPx.DirectoryType;")
@@ -22,6 +22,8 @@ $replace:delete	, *string p,fo_delMenuPlefix=d
 	*if 4==%*js("PPx.result=PPx.DirectoryType")%:*string p,fo_delMenuPlefix=0
 	%M_ppmDelete,[?cursor_delete:D]
 	*string p,fo_delMenuPlefix=
+$replace:newfile	,*string o,name=%*input("%*nowdatetime("yND-HM").txt" -title:"Makefile" -mode:Ec -k *cursor -8%%:*mapkey use,K_ppmRename)
+	*makefile "%so'name'"
 $replace:undo	, *script [?repopath:%sgu'ppmrepo']\ppm-fileoperation\dist\undo.js
 }
 K_ppmRename	= {
